# cryptic

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  hash.py  prueba.py  pyproject.toml  pyproject.toml.backup  resultado.csv  resultado.json  resultado.yaml  test_data.csv  test_passwords.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: tests.yml
cryptic/: __init__.py
cryptic/cli/: __init__.py  main.py
cryptic/core/: __init__.py  analyzer.py  hash_identifier.py  sensitive_detector.py
cryptic/patterns/: __init__.py  hash_patterns.py  sensitive_patterns.py
cryptic/utils/: __init__.py  formatters.py
docs/: API_CLEANUP.md  BOILERPLATE_CLEANUP.md  REFACTORING_SUMMARY.md  ROADMAP.md
examples/: basic_usage.py
saludador/: __init__.py  core.py
scripts/: check_all.py
tests/: README_TESTS.md  test_cli.py  test_cryptic_analyzer.py  test_hash.py  test_lib.py  test_sensitive_analyzer_integration.py  test_sensitive_patterns.py
